crates/eure-macros/tests/compile_fail/proxy_union_newtype_mismatch_into.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/proxy_union_newtype_mismatch_into.rs:12:7
   |
12 |     A(u64),
   |       ^^^
   |       |
   |       expected `u64`, found `u32`
   |       arguments to this function are incorrect
   |
note: associated function defined here
  --> $WORKSPACE/crates/eure-document/src/write.rs
   |
   |     fn write(value: T, c: &mut DocumentConstructor) -> Result<(), WriteError>;
   |        ^^^^^
help: you can convert a `u32` to a `u64`
   |
12 |     A(u64.into()),
   |          +++++++
